# domesticator

./: .env.local.example  .gitignore  Dockerfile  Makefile  README  README.md  pyproject.toml  setup.sh  start.bat
configs/: hosts.json
http_api/: routers.py  run.py  serve.py
http_api/routes/: base.py  crawl.py  hosts.py  proxies.py  status.py
shared/browser/: crawl.py  crawler.py  manager.py  sync_crawler.py
shared/browser/bypass/: amazon.py  cloudflare.py  stealth.py
shared/config/: memory_store.py  models.py  pg_store.py  store.py
shared/proto/: event.proto
shared/proxy/: manager.py  memory_store.py  pg_store.py  store.py
shared/transform/: pipeline.py
shared/transform/transformers/: __init__.py  array.py  logic.py  price.py  string_ops.py  text.py
shared/utils/: logging.py
static/: index.html
tests/: conftest.py  test_config_store.py  test_crawler.py  test_models.py  test_pipeline.py  test_proxy_manager.py  test_routes_base.py  test_routes_crawl.py  test_routes_hosts.py  test_routes_proxies.py  test_routes_status.py  test_transforms.py
