[project]
name = "domesticator"
version = "1.0.0"
description = "FastAPI сервис для умного веб-скрейпинга с конфигурируемыми селекторами и системой трансформации данных"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "crawlee[playwright]>=0.5.0",
    "fake-useragent>=2.2.0",
    "protobuf>=4.21.0",
    "grpcio-tools>=1.50.0",
    "asyncpg>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["http_api", "shared"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
